--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ html {
 }
 
 body {
-    background-color:rgb(249, 247, 247);
+    background-color:#f1dfc0;
     margin: 0;
 }   
 
 header {
-    background-color:blanchedalmond;
+    background-color:rgba(211,181,141,255);
     margin: 0;
     width: 100%;
     position: fixed;
@@ -39,6 +39,10 @@ h1 {
 
 #acolachicken {
     text-decoration: none;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: whitesmoke;
     color: black;
     font-size: 60px;
     font-weight: bolder;
@@ -72,32 +76,35 @@ h1 {
     width: 40%;
 }
 
-.mr {
-    display: flex;
-}
-
 button {
     width: 80px;
     height: 30px;
-    background-color:blanchedalmond;
+    background-color:rgba(211,181,141,255);
     border: none;
     text-align: center;
     font-weight: bold;
     font-size: 20px; 
 }
 
-.ml {
+.mr {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+    padding-right: 70px;
+    margin: 20px;
+   
 }
 
 .mr ul {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     padding: 0;
     margin: 0;
     gap: 20px;
+    align-content: center;
 }
 
 .mr li {
@@ -107,5 +114,16 @@ button {
 .mr a {
     text-decoration: none;
     color: black;
-    
+}
+
+p {
+    font-size: 20px;
+}
+
+a {
+    font-size: 20px;
+}
+
+li {
+    font-size: 20px;
 }
